<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="15dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/deviceName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/deviceImage"
            android:text="@string/device_name"
            android:textSize="25sp"
            />

        <ImageView
            android:id="@+id/deviceImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            app:layout_constraintTop_toBottomOf="@id/deviceName"
            app:layout_constraintBottom_toTopOf="@+id/deviceManufacturer"
            />

        <TextView
            android:id="@+id/deviceManufacturer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/deviceImage"
            app:layout_constraintBottom_toTopOf="@+id/description"
            android:text="@string/manufacturer"
            />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/deviceManufacturer"
            app:layout_constraintBottom_toTopOf="@+id/active"
            android:text="@string/some_description"
            />

        <TextView
            android:id="@+id/onOff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/description"
            app:layout_constraintBottom_toTopOf="@+id/delete"
            android:text="@string/device_activity"
            />

        <Button
            android:id="@+id/active"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            app:layout_constraintBottom_toTopOf="@+id/delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/onOff"
            app:layout_constraintTop_toBottomOf="@id/description" />

        <Button
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/active" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>